# home-tools

./: .gitignore  CLAUDE.md  README.md  render.yaml
.github/workflows/: bill-reminder.yml  tests.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: auth.py  config.py  models.py  utils.py
backend/app/routers/: auth.py  bills.py  cron.py  health.py
backend/app/services/: drive.py  payments.py  receipts.py  reminders.py  telegram.py
backend/tests/: conftest.py  test_auth.py  test_bills.py  test_cron.py  test_drive.py  test_health.py  test_main.py  test_reminders.py  test_telegram.py  test_utils.py
frontend/: index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: App.test.tsx
frontend/src/__tests__/components/: ManageBillsModal.test.tsx  ProtectedRoute.test.tsx  UploadReceiptModal.test.tsx
frontend/src/__tests__/contexts/: AuthContext.test.tsx
frontend/src/__tests__/pages/: Bills.test.tsx  Home.test.tsx  Login.test.tsx  NotFound.test.tsx
frontend/src/components/: ManageBillsModal.tsx  OverdueInfoModal.tsx  ProtectedRoute.tsx  UploadReceiptModal.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Bills.tsx  Home.tsx  Login.tsx  NotFound.tsx
