[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "supabase>=2.30.1",
    "uvicorn[standard]>=0.48.0",
]
