[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.30.1",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx2>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
